--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
     <link rel="stylesheet" href="/css/main.css" />
+    <!-- <link rel="stylesheet" href="/css/animations.css" /> -->
 </head>
 
 <body>
@@ -17,6 +18,12 @@
             <h1>Onde surgiu a música que você ouve?</h1>
             <button class="btn btn-info">Descubra aqui!</button>
         </div>
+        <div class="shape "></div>
+        <div class="shape-2 "></div>
+        <div class="shape-3 "></div>
+        <div class="shape-4 "></div>
+        <div class="shape-5 "></div>
+        <div class="shape-6 "></div>
     </div>
     <div class="top container-fluid purple-dark">
         <nav class="navbar navbar-expand-lg navbar-dark container ">
