--- a/index.html
+++ b/index.html
@@ -25,48 +25,151 @@
         <div class="shape-5 "></div>
         <div class="shape-6 "></div>
     </div>
-    <div class="top container-fluid purple-dark">
-        <nav class="navbar navbar-expand-lg navbar-dark container ">
-            <a class="navbar-brand" href="#">MusicAll</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+    <div class="top container-fluid">
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+            <div class="container">
+                <a class="navbar-brand" href="#">MusicAll</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
-            <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-                <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle " href="#" id="navbarDropdown" role="button"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Música
-                        </a>
-                        <div class="dropdown-menu bg-transparent" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item text-light" href="#">História</a>
-                            <a class="dropdown-item text-light" href="#">Estilos</a>
-                            <a class="dropdown-item text-light" href="#">Instrumentos</a>
-                        </div>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Piano digital</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Escolas</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Lojas</a>
-                    </li>
-                </ul>
-                <div class="login justify-content-end">
-                    <button class="btn"><i class="fas fa-sign-in-alt"></i> Entrar</button>
-                    <button class="btn"><i class="fas fa-user-plus"></i> Cadastre-se</button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+                    <ul class="navbar-nav">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle " href="#" id="navbarDropdown" role="button"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Música
+                            </a>
+                            <div class="dropdown-menu bg-transparent" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item text-light" href="#">História</a>
+                                <a class="dropdown-item text-light" href="#">Estilos</a>
+                                <a class="dropdown-item text-light" href="#">Instrumentos</a>
+                            </div>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Piano digital</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Escolas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Lojas</a>
+                        </li>
+                    </ul>
+                    <div class="login justify-content-end">
+                        <button class="btn"><i class="fas fa-sign-in-alt"></i> Entrar</button>
+                        <button class="btn"><i class="fas fa-user-plus"></i> Cadastre-se</button>
+                    </div>
                 </div>
             </div>
-
         </nav>
 
+    </div>
+    <section class="piano-home container mt-5">
+        <div class="row">
+            <div class="col-md-6">
+                <h2>Aprenda com a gente</h2>
+                <p>Eu dou dinheiro pra minha filha. Eu dou dinheiro pra ela viajar, então é... é... Já vivi muito sem
+                    dinheiro, já vivi muito com dinheiro. -Jornalista: Coloca esse dinheiro na poupança que a senhora
+                    ganha R$10 mil por mês. -Dilma: O que que é R$10 mil?</p>
+            </div>
+            <div class="col-md-6">
+                <h2>Piano digital</h2>
+                <img class="mt-2" src="img/piano.png" width="100%" />
+                <button class="btn btn-info mt-3">Tocar agora!</button>
+            </div>
+        </div>
+    </section>
+    <div class="division container-fluid">
+
+    </div>
+    <section class="study container">
+        <div class="row">
+            <div class="col-md-12">
+                <h2>Quer estudar música?</h2>
+                <div class="row pt-3">
+                    <div class="col-md-6">
+                        <h4>Encontre uma escola</h4>
+                        <p>Eu dou dinheiro pra minha filha. Eu dou dinheiro pra ela viajar, então é... é...
+                            Já vivi
+                            muito
+                            sem
+                            dinheiro.</p>
+                    </div>
+                    <div class="col-md-6">
+                        <h4>Encontre uma escola</h4>
+                        <p>Eu dou dinheiro pra minha filha. Eu dou dinheiro pra ela viajar, então é... é...
+                            Já vivi
+                            muito
+                            sem
+                            dinheiro.</p>
+                    </div>
+                    <div class="col-md-6">
+                        <h4>Encontre uma escola</h4>
+                        <p>Eu dou dinheiro pra minha filha. Eu dou dinheiro pra ela viajar, então é... é...
+                            Já vivi
+                            muito
+                            sem
+                            dinheiro.</p>
+                    </div>
+                    <div class="col-md-6">
+                        <h4>Encontre uma escola</h4>
+                        <p>Eu dou dinheiro pra minha filha. Eu dou dinheiro pra ela viajar, então é... é...
+                            Já vivi
+                            muito
+                            sem
+                            dinheiro.</p>
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+
+    </section>
+    <div class="division container-fluid">
+
+    </div>
+    <div class="sign-up">
+        <div class="container">
+
+            <div class="row">
+                <div class="col-md-6">
+                    <h2 class="text-center">Cadastre-se </h2>
+                    <form class="mt-5">
+                        <div class="form-group">
+                            <label for="formGroupExampleInput">Nome de usuário</label>
+                            <input type="text" class="form-control" id="formGroupExampleInput"
+                                placeholder="Ex: musicall25">
+                        </div>
+                        <div class="form-group">
+                            <label for="formGroupExampleInput2">E-mail</label>
+                            <input type="text" class="form-control" id="formGroupExampleInput2"
+                                placeholder="Ex: musicall@gmail.com">
+                        </div>
+                        <div class="form-group">
+                            <label for="formGroupExampleInput2">Senha</label>
+                            <input type="password" class="form-control" id="formGroupExampleInput2" placeholder="Senha">
+                        </div>
+                        <button class="btn" type="submit">Cadastrar</button>
+                        <button class="btn">Limpar</button>
+                    </form>
+                </div>
+                <div class="col-md-6 social-login">
+                    <h2 class="text-center">Ou faça login com sua rede social favorita </h2>
+                    <div class="mt-5 text-center">
+                        <i class="fab fa-facebook-square"></i>
+                        <i class="fab fa-linkedin"></i>
+                        <i class="fab fa-twitter-square"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
