--- a/index.html
+++ b/index.html
@@ -135,42 +135,43 @@
     <div class="division container-fluid">
 
     </div>
-    <div class="sign-up">
-        <div class="container">
-
-            <div class="row">
-                <div class="col-md-6">
-                    <h2 class="text-center">Cadastre-se </h2>
-                    <form class="mt-5">
-                        <div class="form-group">
-                            <label for="formGroupExampleInput">Nome de usuário</label>
-                            <input type="text" class="form-control" id="formGroupExampleInput"
-                                placeholder="Ex: musicall25">
-                        </div>
-                        <div class="form-group">
-                            <label for="formGroupExampleInput2">E-mail</label>
-                            <input type="text" class="form-control" id="formGroupExampleInput2"
-                                placeholder="Ex: musicall@gmail.com">
-                        </div>
-                        <div class="form-group">
-                            <label for="formGroupExampleInput2">Senha</label>
-                            <input type="password" class="form-control" id="formGroupExampleInput2" placeholder="Senha">
-                        </div>
-                        <button class="btn" type="submit">Cadastrar</button>
-                        <button class="btn">Limpar</button>
-                    </form>
-                </div>
-                <div class="col-md-6 social-login">
-                    <h2 class="text-center">Ou faça login com sua rede social favorita </h2>
-                    <div class="mt-5 text-center">
-                        <i class="fab fa-facebook-square"></i>
-                        <i class="fab fa-linkedin"></i>
-                        <i class="fab fa-twitter-square"></i>
+    <div class="sign-up container">
+        <div class="row">
+            <div class="col-md-6">
+                <h2 class="text-center">Cadastre-se </h2>
+                <form class="mt-5">
+                    <div class="form-group">
+                        <label for="formGroupExampleInput">Nome de usuário</label>
+                        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Ex: musicall25"
+                            required>
                     </div>
+                    <div class="form-group">
+                        <label for="formGroupExampleInput2">E-mail</label>
+                        <input type="text" class="form-control" id="formGroupExampleInput2"
+                            placeholder="Ex: musicall@gmail.com" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="formGroupExampleInput2">Senha</label>
+                        <input type="password" class="form-control" id="formGroupExampleInput2" placeholder="Senha"
+                            required>
+                    </div>
+                    <button class="btn" type="submit">Cadastrar</button>
+                    <button class="btn">Limpar</button>
+                </form>
+            </div>
+            <div class="col-md-6 social-login">
+                <h2 class="text-center">Ou faça login com sua rede social favorita </h2>
+                <div class="mt-5 text-center">
+                    <i class="fab fa-facebook-square"></i>
+                    <i class="fab fa-linkedin"></i>
+                    <i class="fab fa-twitter-square"></i>
                 </div>
             </div>
         </div>
     </div>
+    <footer class="container-fluid">
+        <h3 class="text-center text-light align-middle">footer</h3>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
     </script>
