--- a/index.html
+++ b/index.html
@@ -13,20 +13,19 @@
 </head>
 
 <body>
-    <div class="top-bg">
+    <div class="top-bg purple-clear">
         <div class="content-top">
             <h1>Onde surgiu a música que você ouve?</h1>
-            <button class="btn btn-info">Descubra aqui!</button>
         </div>
-        <div class="shape "></div>
-        <div class="shape-2 "></div>
-        <div class="shape-3 "></div>
-        <div class="shape-4 "></div>
-        <div class="shape-5 "></div>
-        <div class="shape-6 "></div>
+        <!--
+        <img src="img/nota.png" class="shape">
+        <img src="img/nota.png" class="shape-2">
+        <img src="img/nota.png" class="shape-3">
+        <img src="img/nota.png" class="shape-4">
+        -->
     </div>
     <div class="top container-fluid">
-        <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+        <nav id="nav" class="navbar navbar-expand-lg navbar-dark fixed-top">
             <div class="container">
                 <a class="navbar-brand" href="#">MusicAll</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -38,32 +37,34 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                     <ul class="navbar-nav">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle " href="#" id="navbarDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Música
                             </a>
-                            <div class="dropdown-menu bg-transparent" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item text-light" href="#">História</a>
-                                <a class="dropdown-item text-light" href="#">Estilos</a>
-                                <a class="dropdown-item text-light" href="#">Instrumentos</a>
+                            <div id="dropdown-menu" class="dropdown-menu bg-transparent"
+                                aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item text-light" href="historia.html">História</a>
+                                <a class="dropdown-item text-light" href="estilos.html">Estilos</a>
+                                <a class="dropdown-item text-light" href="instrumentos.html">Instrumentos</a>
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Piano digital</a>
+                            <a class="nav-link" href="piano.html">Piano digital</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Escolas</a>
+                            <a class="nav-link" href="escolas.html">Escolas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Lojas</a>
+                            <a class="nav-link" href="lojas.html">Lojas</a>
                         </li>
                     </ul>
                     <div class="login justify-content-end">
-                        <button class="btn"><i class="fas fa-sign-in-alt"></i> Entrar</button>
-                        <button class="btn"><i class="fas fa-user-plus"></i> Cadastre-se</button>
+                        <a href="login.html"><button class="btn"><i class="fas fa-sign-in-alt"></i> Login</button></a>
+                        <a href="cadastro.html"><button class="btn"><i class="fas fa-user-plus"></i>
+                                Cadastre-se</button></a>
                     </div>
                 </div>
             </div>
@@ -81,11 +82,11 @@
             <div class="col-md-6">
                 <h2>Piano digital</h2>
                 <img class="mt-2" src="img/piano.png" width="100%" />
-                <button class="btn btn-info mt-3">Tocar agora!</button>
+                <a href="piano.html"><button class="btn btn-info mt-3">Tocar agora!</button></a>
             </div>
         </div>
     </section>
-    <div class="division container-fluid">
+    <div class="division container-fluid purple-clear">
 
     </div>
     <section class="study container">
@@ -132,7 +133,7 @@
         </div>
 
     </section>
-    <div class="division container-fluid">
+    <div class="division container-fluid purple-clear">
 
     </div>
     <div class="sign-up container">
@@ -155,8 +156,9 @@
                         <input type="password" class="form-control" id="formGroupExampleInput2" placeholder="Senha"
                             required>
                     </div>
-                    <button class="btn" type="submit">Cadastrar</button>
-                    <button class="btn">Limpar</button>
+                    <button class="btn btn-default" type="submit">Cadastrar</button>
+                    <button class="btn btn-default">Limpar</button>
+                    <p class="mt-3">Já tem conta? <a href="login.html">Faça login</a></p>
                 </form>
             </div>
             <div class="col-md-6 social-login">
@@ -170,7 +172,39 @@
         </div>
     </div>
     <footer class="container-fluid">
-        <h3 class="text-center text-light align-middle">footer</h3>
+        <div class="container text-center">
+            <div class="row">
+                <div class="col-md-4">
+                    <h3><i class="fas fa-thumbs-up"></i> Redes sociais</h3>
+                    <div class="social">
+                        <i class="fab fa-facebook-square"></i>
+                        <i class="fab fa-instagram"></i>
+                        <i class="fab fa-twitter-square"></i>
+                    </div>
+                </div>
+                <div class="col-md-4 footer-box">
+                    <h3><i class="fas fa-bullhorn"></i> Anuncie conosco</h3>
+                    <ul class="mt-3">
+                        <li>
+                            <a name="escola" href="cadastro_anunciante.html">Tenho uma escola <i
+                                    class="fas fa-hand-point-left"></i></a>
+                        </li>
+                        <li>
+                            <a name="loja" href="cadastro_anunciante.html">Tenho uma loja <i
+                                    class="fas fa-hand-point-left"></i></a>
+                        </li>
+                    </ul>
+
+                </div>
+                <div class="col-md-4 footer-box">
+                    <h3><i class="far fa-bell"></i> Recebas as novidades</h3>
+                    <form>
+                        <input type="text" class="form-control mt-3" placeholder="Ex: musicall@gmail.com" required />
+                        <button class="mt-2 btn btn-default btn-block">Inscrever-se</button>
+                    </form>
+                </div>
+            </div>
+        </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
@@ -181,14 +215,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
     </script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
-
-<!-- 
-                <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn purple-clear my-2 my-sm-0" type="submit">Search</button>
-                </form>
-
--->
