--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     <div class="top container-fluid">
         <nav id="nav" class="navbar navbar-expand-lg navbar-dark fixed-top">
             <div class="container">
-                <a class="navbar-brand" href="#">MusicAll</a>
+                <a class="navbar-brand" href="index.html">MusicAll</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                     aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <span class="navbar-toggler-icon "></span>
                 </button>
 
                 <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
@@ -82,7 +82,7 @@
             <div class="col-md-6">
                 <h2>Piano digital</h2>
                 <img class="mt-2" src="img/piano.png" width="100%" />
-                <a href="piano.html"><button class="btn btn-info mt-3">Tocar agora!</button></a>
+                <a href="piano.html"><button class="btn btn-default mt-3">Tocar agora!</button></a>
             </div>
         </div>
     </section>
