--- a/piano.html
+++ b/piano.html
@@ -8,24 +8,13 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
+    <link rel="stylesheet" href="/css/piano.css" />
     <link rel="stylesheet" href="/css/main.css" />
-    <!-- <link rel="stylesheet" href="/css/animations.css" /> -->
 </head>
 
 <body>
-    <div class="top-bg purple-clear">
-        <div class="content-top">
-            <h1>Onde surgiu a música que você ouve?</h1>
-        </div>
-        <!--
-        <img src="img/nota.png" class="shape">
-        <img src="img/nota.png" class="shape-2">
-        <img src="img/nota.png" class="shape-3">
-        <img src="img/nota.png" class="shape-4">
-        -->
-    </div>
-    <div class="top container-fluid">
-        <nav id="nav" class="navbar navbar-expand-lg navbar-dark fixed-top">
+    <div class="container-fluid ">
+        <nav id="nav" class="navbar navbar-expand-lg navbar-dark fixed-top purple-clear">
             <div class="container">
                 <a class="navbar-brand" href="index.html">MusicAll</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -44,8 +33,7 @@
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Música
                             </a>
-                            <div id="dropdown-menu" class="dropdown-menu bg-transparent"
-                                aria-labelledby="navbarDropdown">
+                            <div id="dropdown-menu" class="dropdown-menu purple-clear" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item text-light" href="historia.html">História</a>
                                 <a class="dropdown-item text-light" href="estilos.html">Estilos</a>
                                 <a class="dropdown-item text-light" href="instrumentos.html">Instrumentos</a>
@@ -71,106 +59,91 @@
         </nav>
 
     </div>
-    <section class="piano-home container mt-5">
-        <div class="row">
-            <div class="col-md-6">
-                <h2>Aprenda com a gente</h2>
-                <p>Eu dou dinheiro pra minha filha. Eu dou dinheiro pra ela viajar, então é... é... Já vivi muito sem
-                    dinheiro, já vivi muito com dinheiro. -Jornalista: Coloca esse dinheiro na poupança que a senhora
-                    ganha R$10 mil por mês. -Dilma: O que que é R$10 mil?</p>
-            </div>
-            <div class="col-md-6">
-                <h2>Piano digital</h2>
-                <img class="mt-2" src="img/piano.png" width="100%" />
-                <a href="piano.html"><button class="btn btn-default mt-3">Tocar agora!</button></a>
-            </div>
-        </div>
-    </section>
-    <div class="division container-fluid purple-clear">
 
-    </div>
-    <section class="study container">
-        <div class="row">
-            <div class="col-md-12">
-                <h2>Quer estudar música?</h2>
-                <div class="row pt-3">
-                    <div class="col-md-6">
-                        <h4>Encontre uma escola</h4>
-                        <p>Eu dou dinheiro pra minha filha. Eu dou dinheiro pra ela viajar, então é... é...
-                            Já vivi
-                            muito
-                            sem
-                            dinheiro.</p>
-                    </div>
-                    <div class="col-md-6">
-                        <h4>Encontre uma escola</h4>
-                        <p>Eu dou dinheiro pra minha filha. Eu dou dinheiro pra ela viajar, então é... é...
-                            Já vivi
-                            muito
-                            sem
-                            dinheiro.</p>
-                    </div>
-                    <div class="col-md-6">
-                        <h4>Encontre uma escola</h4>
-                        <p>Eu dou dinheiro pra minha filha. Eu dou dinheiro pra ela viajar, então é... é...
-                            Já vivi
-                            muito
-                            sem
-                            dinheiro.</p>
-                    </div>
-                    <div class="col-md-6">
-                        <h4>Encontre uma escola</h4>
-                        <p>Eu dou dinheiro pra minha filha. Eu dou dinheiro pra ela viajar, então é... é...
-                            Já vivi
-                            muito
-                            sem
-                            dinheiro.</p>
-                    </div>
+    <section class="main-piano">
 
+        <div class="wrap container">
+            <!--Controls-->
+            <div class="controls-container">
+                <div class="speakers"></div>
+                <div class="controls">
+                    <div class="input-container">
+                        <h2>Keyboard 5000</h2>
+                        <div class="input-buttons">
+                            <div class="demo-buttons">
+                                <div>
+                                    <button class="demo-button demo1"></button>
+                                    <div>1</div>
+                                </div>
+                                <div>
+                                    <button class="demo-button demo2"></button>
+                                    <div>2</div>
+                                </div>
+                                <div>
+                                    <button class="demo-button demo3"></button>
+                                    <div>3</div>
+                                </div>
+                                <div>
+                                    <button class="demo-button demo4"></button>
+                                    <div>4</div>
+                                </div>
+                                <div>
+                                    <button class="help"></button>
+                                    <div>Help</div>
+                                </div>
+                            </div>
+                            <div class="demo-label">Demos</div>
+                        </div>
+                    </div>
+                    <div class="inputs">
+                        <input type="range" class="volume" step="0.1" min="0" max="1"></input>
+                        <input type="range" class="tempo" min="2" max="8"></input>
+                    </div>
+                    <div class="input-labels">
+                        <div>Volume</div>
+                        <div>Tempo</div>
+                    </div>
                 </div>
-
+                <div class="speakers"></div>
             </div>
+
+            <div class="keyboard">
+                <div data-note="c4" data-key="81" class="key white oct">q</div>
+                <div data-note="db4" data-key="50" class="key black black1 oct">2</div>
+                <div data-note="d4" data-key="87" class="key white oct">w</div>
+                <div data-note="eb4" data-key="51" class="key black black2 oct">3</div>
+                <div data-note="e4" data-key="69" class="key white oct">e</div>
+                <div data-note="f4" data-key="82" class="key white oct">r</div>
+                <div data-note="gb4" data-key="53" class="key black black3 oct">5</div>
+                <div data-note="g4" data-key="84" class="key white oct">t</div>
+                <div data-note="ab4" data-key="54" class="key black black4 oct">6</div>
+                <div data-note="a4" data-key="89" class="key white oct">y</div>
+                <div data-note="bb4" data-key="55" class="key black black5 oct">7</div>
+                <div data-note="b4" data-key="85" class="key white oct">u</div>
+                <div data-note="c5" data-key="88" class="key white">x</div>
+                <div data-note="db5" data-key="68" class="key black black6">d</div>
+                <div data-note="d5" data-key="67" class="key white">c</div>
+                <div data-note="eb5" data-key="70" class="key black black7">f</div>
+                <div data-note="e5" data-key="86" class="key white">v</div>
+                <div data-note="f5" data-key="66" class="key white">b</div>
+                <div data-note="gb5" data-key="72" class="key black black8">h</div>
+                <div data-note="g5" data-key="78" class="key white">n</div>
+                <div data-note="ab5" data-key="74" class="key black black9">j</div>
+                <div data-note="a5" data-key="77" class="key white">m</div>
+                <div data-note="bb5" data-key="75" class="key black black10">k</div>
+                <div data-note="b5" data-key="188" class="key white">,</div>
+                <div data-note="c6" data-key="190" class="key white">.</div>
+            </div>
+            <h3 class="text-light ml-5 mt-2">Músicas demo</h3>
+            <p class="text-light ml-5 mt-2">1 - Radiohead - No surprises</p>
+            <p class="text-light ml-5">2 - Life on Mars - David Bowie</p>
+            <p class="text-light ml-5">3 - Für Elise - Ludwig van Beethoven </p>
+            <p class="text-light ml-5">4 - The Entertainer - Scott Joplin </p>
+
         </div>
 
     </section>
-    <div class="division container-fluid purple-clear">
 
-    </div>
-    <div class="sign-up container">
-        <div class="row">
-            <div class="col-md-6">
-                <h2 class="text-center">Cadastre-se </h2>
-                <form class="mt-5">
-                    <div class="form-group">
-                        <label for="formGroupExampleInput">Nome de usuário</label>
-                        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Ex: musicall25"
-                            required>
-                    </div>
-                    <div class="form-group">
-                        <label for="formGroupExampleInput2">E-mail</label>
-                        <input type="text" class="form-control" id="formGroupExampleInput2"
-                            placeholder="Ex: musicall@gmail.com" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="formGroupExampleInput2">Senha</label>
-                        <input type="password" class="form-control" id="formGroupExampleInput2" placeholder="Senha"
-                            required>
-                    </div>
-                    <button class="btn btn-default" type="submit">Cadastrar</button>
-                    <button class="btn btn-default">Limpar</button>
-                    <p class="mt-3">Já tem conta? <a href="login.html">Faça login</a></p>
-                </form>
-            </div>
-            <div class="col-md-6 social-login">
-                <h2 class="text-center">Ou faça login com sua rede social favorita </h2>
-                <div class="mt-5 text-center">
-                    <i class="fab fa-facebook-square"></i>
-                    <i class="fab fa-linkedin"></i>
-                    <i class="fab fa-twitter-square"></i>
-                </div>
-            </div>
-        </div>
-    </div>
     <footer class="container-fluid">
         <div class="container text-center">
             <div class="row">
@@ -216,6 +189,7 @@
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
     </script>
     <script src="js/app.js"></script>
+    <script src="js/piano.js"></script>
 </body>
 
 </html>
