--- a/piano.html
+++ b/piano.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MusicAll</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/bootstrap.min.css" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
     <link rel="stylesheet" href="/css/piano.css" />
     <link rel="stylesheet" href="/css/main.css" />
@@ -89,7 +88,7 @@
                                 </div>
                                 <div>
                                     <button class="help"></button>
-                                    <div>Help</div>
+                                    <div>Teclas</div>
                                 </div>
                             </div>
                             <div class="demo-label">Demos</div>
@@ -101,13 +100,13 @@
                     </div>
                     <div class="input-labels">
                         <div>Volume</div>
-                        <div>Tempo</div>
+                        <div>Velocidade</div>
                     </div>
                 </div>
                 <div class="speakers"></div>
             </div>
 
-            <div class="keyboard">
+            <div class="keyboard container">
                 <div data-note="c4" data-key="81" class="key white oct">q</div>
                 <div data-note="db4" data-key="50" class="key black black1 oct">2</div>
                 <div data-note="d4" data-key="87" class="key white oct">w</div>
@@ -134,8 +133,8 @@
                 <div data-note="b5" data-key="188" class="key white">,</div>
                 <div data-note="c6" data-key="190" class="key white">.</div>
             </div>
-            <h3 class="text-light ml-5 mt-2">Músicas demo</h3>
-            <p class="text-light ml-5 mt-2">1 - Radiohead - No surprises</p>
+            <h3 class="text-light ml-5 mt-5">Músicas demo</h3>
+            <p class="demo-button demo1 text-light ml-5 mt-2">1 - Radiohead - No surprises</p>
             <p class="text-light ml-5">2 - Life on Mars - David Bowie</p>
             <p class="text-light ml-5">3 - Für Elise - Ludwig van Beethoven </p>
             <p class="text-light ml-5">4 - The Entertainer - Scott Joplin </p>
@@ -181,13 +180,13 @@
     </footer>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
-    </script>
+        </script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-    </script>
+        </script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
-    </script>
+        </script>
     <script src="js/app.js"></script>
     <script src="js/piano.js"></script>
 </body>
