--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MusicAll</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/bootstrap.min.css" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
     <link rel="stylesheet" href="/css/main.css" />
     <!-- <link rel="stylesheet" href="/css/animations.css" /> -->
@@ -27,7 +26,7 @@
     <div class="top container-fluid">
         <nav id="nav" class="navbar navbar-expand-lg navbar-dark fixed-top">
             <div class="container">
-                <a class="navbar-brand" href="index.html">MusicAll</a>
+                <a class="navbar-brand" href="index.html"><i class="fas fa-headphones-alt"></i> MusicAll </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -73,13 +72,13 @@
     </div>
     <section class="piano-home container mt-5">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-lg-6">
                 <h2>Aprenda com a gente</h2>
                 <p>Eu dou dinheiro pra minha filha. Eu dou dinheiro pra ela viajar, então é... é... Já vivi muito sem
                     dinheiro, já vivi muito com dinheiro. -Jornalista: Coloca esse dinheiro na poupança que a senhora
                     ganha R$10 mil por mês. -Dilma: O que que é R$10 mil?</p>
             </div>
-            <div class="col-md-6">
+            <div class="col-lg-6">
                 <h2>Piano digital</h2>
                 <img class="mt-2" src="img/piano.png" width="100%" />
                 <a href="piano.html"><button class="btn btn-default mt-3">Tocar agora!</button></a>
@@ -138,7 +137,7 @@
     </div>
     <div class="sign-up container">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-lg-6">
                 <h2 class="text-center">Cadastre-se </h2>
                 <form class="mt-5">
                     <div class="form-group">
@@ -161,7 +160,7 @@
                     <p class="mt-3">Já tem conta? <a href="login.html">Faça login</a></p>
                 </form>
             </div>
-            <div class="col-md-6 social-login">
+            <div class="col-lg-6 social-login">
                 <h2 class="text-center">Ou faça login com sua rede social favorita </h2>
                 <div class="mt-5 text-center">
                     <i class="fab fa-facebook-square"></i>
@@ -208,13 +207,13 @@
     </footer>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
-    </script>
+        </script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-    </script>
+        </script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
-    </script>
+        </script>
     <script src="js/app.js"></script>
 </body>
 
